<?xml version="1.0"?>
<package format="3">
  <name>l298n_bringup</name>
  <version>0.0.1</version>
  <description>Bringup for L298N ros2_control robot</description>

  <maintainer email="a-grishin@brexa.com">siming</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- launch -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <!-- ros2_control -->
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>

  <!-- controllers -->
  <exec_depend>diff_drive_controller</exec_depend>

  <!-- robot -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

  <!-- your hardware package -->
  <exec_depend>l298n_ros2_control</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
